@@ -1,11 +1,0 @@
-Error subclass: #VMError
-      instanceVariableNames: ''!
-
-Error subclass: #Halt
-      instanceVariableNames: ''!
-
-VMError subclass: #PrimitiveFailed
-	instanceVariableNames: ''!
-
-Halt subclass: #MessageNotUnderstood
-     instanceVariableNames: ''!
