@@ -1,17 +1,0 @@
-Error subclass: #NotImplemented
-      instanceVariableNames: ''
-!
-
-NotImplemented subclass: #NotYetImplemented
-	       instanceVariableNames: ''
-!
-
-
-NotImplemented subclass: #ShouldNotImplement
-	       instanceVariableNames: ''
-!
-
-
-ShouldNotImplement subclass: #SubclassResponsibility
-		   instanceVariableNames: ''
-!
