@@ -1,0 +1,4 @@
+!WriteStream class methodsFor: 'instance creation'!
+
+on: aCollection
+    
