@@ -27,6 +27,9 @@ typedef enum
     SYX_DATA_CLASS_METHODS,
     SYX_DATA_CLASS_ALL,
 
+    SYX_DATA_METACLASS_INSTANCE_CLASS = SYX_DATA_CLASS_ALL,
+    SYX_DATA_METACLASS_ALL,
+
     SYX_DATA_SYMBOL_ALL = SYX_DATA_OBJECT_ALL,
 
     SYX_DATA_STRING_ALL = SYX_DATA_OBJECT_ALL,
@@ -165,6 +168,7 @@ typedef enum
   {
     SYX_ERROR_INTERP,
     SYX_ERROR_NOT_UNDERSTOOD,
+    SYX_ERROR_NOT_FOUND,
   } SyxSignalInternal;
 
 #endif /* SYX_ENUMS_H */
