@@ -1,6 +1,12 @@
 2007-06-19  Luca Bruno  <lethalman88@gmail.com>
 
 	* syx/syx-memory.c (syx_memory_load_image): fixed
+	
+	* syx/syx-platform.h: added
+	
+	* syx/syx-enums.h (SyxVariables): added Metaclass instanceClass
+	
+	* Smalltalk: added tracebacks and other stuff
 
 2007-06-18  Luca Bruno  <lethalman88@gmail.com>
 
